<resources>
    <string name="app_name">TaskDoDay</string>
    <string name="button">add thing</string>
    <string name="addtask">Add Task</string>
    <string name="calendar_show">calendar</string>
    <string name="go">Go</string>
    <string name="done">Done</string>
    <string name="stats_show">stats</string>
    <string name="options_show">options</string>
    <string name="create_new">Sort By</string>
    <string name="open">Settings</string>
    <string name="notasks">No Tasks</string>
    <string name="cancel">Cancel</string>
    <string name="incomplete">Only Incomplete</string>
    <string name="delete">Delete Tasks</string>
    <string name="completed">Only Completed</string>
    <string name="scomplete">Completed</string>
    <string name="stime">Time</string>
    <string name="sname">Name</string>
    <string name="nostats">No Statistics Yet</string>
    <string name="taskcompletionrate">Overall Task Competition Rate</string>
    <string name="deletet">delete</string>
    <string name="theme">Theme</string>
    <string name="about">About</string>
    <string name="rollover">Task Rollover</string>
    <string name="notifications">Notifications</string>
    <string name="theme1">Watermelon</string>
    <string name="theme2">Light</string>
    <string name="theme3">Dark</string>
    <string name="daily">Daily Reminder</string>
    <string name="dailyreminder">Set a notification to go off at a specified time to remind you of your incompleted tasks</string>
    <string name="rolloverexplanation">Set incomplete tasks to rollover to the next day at the end of day (11:55 pm). WARNING: When tasks rollover they are counted as incomplete for that day in your statistics</string>
    <string name="rollovertimetext">Rollover Time:</string>
    <string name="ampm">PM</string>
    <string name="number2">59</string>
    <string name="number1">11</string>
    <string name="remindertime">Reminder Time:</string>
    <string name="renumber1">5</string>
    <string name="renumber2">00</string>
    <string name="reampm">PM</string>
    <string name="version">Version: 0.0.1</string>
    <string name="restartnotif">Setting a new theme will require restarting the app to apply</string>
    <string name="channel_name">taskdodaychannel</string>
    <string name="channel_description">for reminders</string>
    <string name="set">Set</string>
    <string name="slide_1_title">TaskDoDay</string>
    <string name="slide_1_desc">TaskDoDay makes it easy to stay on top of your busy life by allowing you to maximize your productivity.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">GOT IT</string>
    <string name="slide_2_title">Add a Task</string>
    <string name="slide_2_desc">Tap the + icon in the bottom right hand corner to begin adding tasks to the day.</string>
    <string name="slide_3_title">Pick a Day</string>
    <string name="slide_3_desc"> You can swipe left and right between days on the home screen or tap the waffle button to switch to a specific day.</string>
    <string name="slide_4_title">Track Your Stats</string>
    <string name="slide_4_desc">See the percentage of tasks you\'ve been able to complete on time by tapping on the line graph button.</string>
</resources>
