<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
 >

    <item
        android:id="@+id/calendar_show"
        android:icon="@drawable/ic_grid_on_black_24dp"

        app:showAsAction="always"
        android:title="@string/calendar_show" />
    <item
        android:id="@+id/stats_show"
        android:icon="@drawable/ic_stats"

        app:showAsAction="ifRoom"
        android:title="@string/stats_show" />
    <item
        android:id="@+id/options_show"
        android:icon="@drawable/ic_menu"

        app:showAsAction="always"
        android:title="@string/options_show" >
    <menu>
        <item android:id="@+id/create_new"
            android:title="@string/create_new" />
        <item android:id="@+id/open"
            android:title="@string/open" />
    </menu>
    </item>


</menu>
