<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/base">



    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:id="@+id/transitions_container2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/taskshow"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/taskshow"
        android:layout_marginBottom="10dp"
        android:visibility="gone"/>








<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:id="@+id/transitions_container"
    android:layout_below="@+id/et"
    android:layout_marginTop="-17dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/notaskslayout"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notasks"
            android:text="@string/notasks"
            android:layout_centerInParent="true"
            android:textColor="#5A5A5A"
            android:textSize="18sp"/>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:scrollbars="vertical" />
</LinearLayout>

</RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        >
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#DFDFDF"
            android:id="@+id/line"
            />
        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:id="@+id/addtasklayout"
            android:background="#FFFFFF"
            >

            <Button android:layout_width="50dp"
                android:layout_height="30dp"

                android:onClick="done"
                android:visibility="gone"
                android:text="@string/done"
                android:id="@+id/done"

                android:background="#FFFFFF"
                android:layout_margin="5dp"

                style="?android:attr/borderlessButtonStyle"
                />
            <Button android:layout_width="80dp"

                android:layout_height="30dp"
                android:text="@string/addtask"
                android:id="@+id/addtask"
                android:onClick="addTask"
                android:visibility="gone"

                android:background="#FFFFFF"

                android:layout_margin="5dp"
                style="?android:attr/borderlessButtonStyle"
                />


        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:id="@+id/deleteinterface"
        android:visibility="gone"
        >
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#DFDFDF"
            android:id="@+id/line2"
            />
        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:background="#FFFFFF"
            >

            <Button android:layout_width="55dp"
                android:layout_height="30dp"

                android:onClick="cancelDelete"
                android:text="@string/cancel"
                android:id="@+id/cancel"
                android:textColor="#888888"
                android:background="#FFFFFF"
                android:layout_margin="5dp"

                style="?android:attr/borderlessButtonStyle"
                />
            <Button android:layout_width="80dp"

                android:layout_height="30dp"
                android:text="@string/deletet"
                android:id="@+id/deleter"
                android:onClick="delete"

                android:background="#FFFFFF"
                android:textColor="#ff0000"
                android:layout_margin="5dp"
                style="?android:attr/borderlessButtonStyle"
                />


        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/old_view"
        android:id="@+id/oldfilter"
        android:visibility="gone"
        />

    <Button android:layout_width="58dp"
        android:layout_height="58dp"
        android:id="@+id/attonu"
        android:background="@drawable/whitecircle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="21dp"

        />
    <Button android:layout_width="70dp"
        android:layout_height="70dp"
        android:onClick="addthing"
        android:id="@+id/atton"
        android:background="@drawable/ic_add_circle50"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="15dp"

        />

</RelativeLayout>